--- a/.gitignore
+++ b/.gitignore
@@ -1,13 +1,28 @@
-venv
-
-.coverage
-
-.pytest_cache
-
+# artifacts
 __pycache__
+.pytest*
+*.egg-info
+*/build/*
+*/dist/*
 
-.devcontainer
 
+# misc
+.coverage
 .vscode
+coverage.xml
 
-*.lock
+
+# Home Assistant configuration
+.cloud
+.HA_VERSION
+.storage
+automations.yaml
+blueprints
+configuration.yaml
+deps
+home-assistant_v2*
+home-assistant.log*
+tts
+scenes.yaml
+scripts.yaml
+secrets.yaml
