--- a/custom_components/elevenlabs_tts/manifest.json
+++ b/custom_components/elevenlabs_tts/manifest.json
@@ -1,14 +1,15 @@
 {
-  "codeowners": ["@carleeno"],
-  "config_flow": false,
-  "dependencies": [],
+  "codeowners": [
+    "@carleeno"
+  ],
+  "config_flow": true,
+  "dependencies": [
+    "http"
+  ],
   "documentation": "https://github.com/carleeno/elevenlabs_tts",
   "domain": "elevenlabs_tts",
   "iot_class": "cloud_polling",
   "name": "ElevenLabs TTS",
-  "requirements": [
-    "requests",
-    "mutagen"
-  ],
-  "version": "1.0.0"
+  "requirements": [],
+  "version": "1.1.0"
 }
