--- a/custom_components/elevenlabs_tts/manifest.json
+++ b/custom_components/elevenlabs_tts/manifest.json
@@ -1,4 +1,6 @@
 {
+  "domain": "elevenlabs_tts",
+  "name": "ElevenLabs TTS",
   "codeowners": [
     "@carleeno"
   ],
@@ -7,9 +9,8 @@
     "http"
   ],
   "documentation": "https://github.com/carleeno/elevenlabs_tts",
-  "domain": "elevenlabs_tts",
   "iot_class": "cloud_polling",
-  "name": "ElevenLabs TTS",
+  "issue_tracker": "https://github.com/carleeno/elevenlabs_tts/issues",
   "requirements": [],
   "version": "1.1.0"
 }
