--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -13,14 +13,17 @@ jobs:
     runs-on: "ubuntu-latest"
     name: Run tests
     steps:
-      - name: Check out code from GitHub
-        uses: "actions/checkout@v2"
-      - name: Set up Python 3.10
-        uses: actions/setup-python@v2
+      - name: "Checkout the repository"
+        uses: "actions/checkout@v3.5.2"
+
+      - name: "Set up Python"
+        uses: actions/setup-python@v4.6.0
         with:
           python-version: "3.10"
+          cache: "pip"
+
       - name: "Install requirements"
-          run: python3 -m pip install -r requirements_test.txt
+        run: python3 -m pip install -r requirements.txt
 
       - name: "Run"
         run: pytest
