--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -26,4 +26,4 @@ jobs:
         run: python3 -m pip install -r requirements.txt
 
       - name: "Run"
-        run: pytest
+        run: python3 -m pytest
