--- a/requirements_test.txt
+++ b/requirements_test.txt
@@ -7,3 +7,8 @@ respx
 
 # needed for home assistant testing
 mutagen
+aiogithubapi>=21.11.0
+aiohttp>=3.8.3,<4.0
+aiohttp_cors==0.7.0
+asynctest==0.13.0
+colorlog==6.7.0
